# a-maze-ing

./: .flake8  .gitignore  LICENSE  Makefile  README.md  a_maze_ing.py  maze.txt  mazegen-1.0.0-py3-none-any.whl  pyproject.toml  test.py
.github/workflows/: ci.yml
settings/: config.txt  maze.txt
src/mazegen/: MazeGenerator.py  __init__.py  a_maze_ing.py  common.py  generator.py  load_config.py  solver.py  writer.py
src/mazegen/interface/: MazeDraw.py  MazeInterface.py  __init__.py
src/package/: main.py
tests/: test_config.py  test_generator.py  test_main.py  test_solver.py  test_writer.py
