[project]
name = "mazegen"
version = "0.1.0"
description = "A maze generator"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "mlx",
]

[dependency-groups]
dev = [
    "flake8>=7.3.0",
    "mypy>=1.19.1",
    "pytest>=9.0.2",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/mazegen"]

[tool.uv.sources]
mlx = { path = "libs/mlx-2.2-py3-none-any.whl" }

[[tool.mypy.overrides]]
module = "mlx"
ignore_missing_imports = true